# Acacia-Film-Assist

./: .dockerignore  .gitignore  BetaTestersGuide.md  CHANGELOG.md  MEMORY_DEBUG_GUIDE.md  PROJECT_MEMORY_TEST_OUTLINE.md  QUICK_RECALL_TEST.md  TAL-E_Overview.md  config.py  create_tables.sql  create_tables_clean.sql  pw_hash.py  pyproject.toml  render.yaml  requirements.txt  requirements_asyncpg.txt  run.py  services.py
app/: __init__.py  config.py  extensions.py
app/admin/: __init__.py  forms.py  routes.py
app/models/: models.py
app/routes/: admin.py  chat_routes.py  document_library.py  project_routes.py  research_routes.py  routes.py  user_routes.py
app/services/: auth_decorators.py  chat_memory_service.py  perplexity_service.py  project_memory_service.py  user_background_service.py
app/static/css/: chat.css  style.css
app/static/js/: chat.js
app/templates/: base.html  index.html  profile.html
app/templates/admin/: api_log.html  create_user.html  dashboard.html  dashboard_signup_approvals.html  edit_user.html  login.html  logins.html  signup.html  update_password.html  user_list.html
scripts/: generate_hash.py
